--- a/BookLibraryAppMVC/appsettings.json
+++ b/BookLibraryAppMVC/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": { "BookLibraryDB": "Data source=.;initial catalog=BookLibraryDB;integrated security=true" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
